fixed css formatting and rephrased bullets to make white space more aesthetic

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -63,7 +63,23 @@ h1 {
 }
 
 h2 {
-	font-size: 24px;
+	font-size: 36px;
+}
+
+h2 + h4 {
+	margin-top: 0px;
+}
+
+ul + h4 {
+	margin-top: -5px;
+}
+
+h4 + p {
+	margin-top: -7px;
+}
+
+ul + h2 {
+	margin-top: -10px;
 }
 
 h3 {
@@ -75,8 +91,12 @@ h4, h5, h6 {
 	font-weight: 700;
 }
 
+h4 {
+	font-size: 17px;	
+}
+
 p + ul {
-    margin-top: -10px;
+    margin-top: -22px;
 }
 
 a {
